--- a/CourseProject/CourseProject.csproj
+++ b/CourseProject/CourseProject.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forms\frmBigButtons.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmBigButtons.Designer.cs">
+      <DependentUpon>frmBigButtons.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\frmFoodCategory.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -72,6 +78,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Forms\frmBigButtons.resx">
+      <DependentUpon>frmBigButtons.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmFoodCategory.resx">
       <DependentUpon>frmFoodCategory.cs</DependentUpon>
     </EmbeddedResource>
