--- a/TwoDbForms/TwoDbForms.csproj
+++ b/TwoDbForms/TwoDbForms.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{42070EC2-EB08-4633-A94A-5D9CA711704A}</ProjectGuid>
+    <ProjectGuid>{F744EA3D-7630-457C-9CB8-124DF185333A}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>CourseProject</RootNamespace>
-    <AssemblyName>CourseProject</AssemblyName>
+    <RootNamespace>TwoDbForms</RootNamespace>
+    <AssemblyName>TwoDbForms</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -46,72 +46,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Forms\frmAddUser.cs">
+    <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\frmAddUser.Designer.cs">
-      <DependentUpon>frmAddUser.cs</DependentUpon>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\frmBigButtons.cs">
+    <Compile Include="frmAddItem.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\frmBigButtons.Designer.cs">
-      <DependentUpon>frmBigButtons.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\frmFoodCategory.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\frmFoodCategory.Designer.cs">
-      <DependentUpon>frmFoodCategory.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\frmFoodItem.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\frmFoodItem.Designer.cs">
-      <DependentUpon>frmFoodItem.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\frmMakeOrder.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\frmMakeOrder.Designer.cs">
-      <DependentUpon>frmMakeOrder.cs</DependentUpon>
-    </Compile>
-    <Compile Include="frmLogin.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frmLogin.Designer.cs">
-      <DependentUpon>frmLogin.cs</DependentUpon>
-    </Compile>
-    <Compile Include="frmMain.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frmMain.Designer.cs">
-      <DependentUpon>frmMain.cs</DependentUpon>
+    <Compile Include="frmAddItem.Designer.cs">
+      <DependentUpon>frmAddItem.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="User.cs" />
-    <Compile Include="UserDb.cs" />
-    <EmbeddedResource Include="Forms\frmAddUser.resx">
-      <DependentUpon>frmAddUser.cs</DependentUpon>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\frmBigButtons.resx">
-      <DependentUpon>frmBigButtons.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\frmFoodCategory.resx">
-      <DependentUpon>frmFoodCategory.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\frmFoodItem.resx">
-      <DependentUpon>frmFoodItem.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\frmMakeOrder.resx">
-      <DependentUpon>frmMakeOrder.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frmLogin.resx">
-      <DependentUpon>frmLogin.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frmMain.resx">
-      <DependentUpon>frmMain.cs</DependentUpon>
+    <EmbeddedResource Include="frmAddItem.resx">
+      <DependentUpon>frmAddItem.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -134,9 +87,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="TakeAwayDbScript.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
